--- a/modules/repository/src/main/AndroidManifest.xml
+++ b/modules/repository/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:label="@string/app_name">
 
-        <activity android:name=".ui.repositories.RepositoriesActivity"
+        <activity android:name=".ui.repositories.RepoActivity"
             android:launchMode="singleTop">
 
             <intent-filter>
