generate schema.json

--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'com.apollographql.android'
 
 android {
     compileSdkVersion build_versions.compile_sdk
