--- a/modules/module.gradle
+++ b/modules/module.gradle
@@ -35,10 +35,6 @@ android {
     sourceSets {
         main{
             java.srcDirs += 'src/main/kotlin'
-
-            graphql{
-                srcDirs = ["${getRootDir()}/baselib/github_base/src/main/graphql/com/tangpj/github"]
-            }
         }
     }
 
@@ -55,6 +51,11 @@ kapt{
     arguments{
         arg("AROUTER_MODULE_NAME", project.getName())
     }
+}
+
+apollo{
+    schemaFilePath= "${getRootDir()}/baselib/github_base/src/main/graphql/com/tangpj/github/schema.json"
+    outputPackageName = "com.tangpj.github"
 }
 
 dependencies {
