--- a/versions.gradle
+++ b/versions.gradle
@@ -16,6 +16,7 @@ versions.dagger = "2.16"
 versions.junit = "4.12"
 versions.espresso = "3.1.0-alpha1"
 versions.retrofit = "2.4.0"
+versions.okhttp = "3.11.0"
 versions.okhttp_logging_interceptor = "3.9.0"
 versions.mockwebserver = "3.8.1"
 versions.apache_commons = "2.5"
