add repo graphql fragment

--- a/versions.gradle
+++ b/versions.gradle
@@ -82,6 +82,11 @@ retrofit.rxjava_adapter = "com.squareup.retrofit2:adapter-rxjava2:$versions.retr
 deps.retrofit = retrofit
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 
+
+def okhttp = [:]
+okhttp.okhttp3 = "com.squareup.okhttp3:okhttp:$versions.okhttp"
+deps.okhttp = okhttp
+
 def dagger = [:]
 dagger.runtime = "com.google.dagger:dagger:$versions.dagger"
 dagger.android = "com.google.dagger:dagger-android:$versions.dagger"
