--- a/github.gradle
+++ b/github.gradle
@@ -2,9 +2,9 @@ ext.deps = [:]
 
 def github = [:]
 
-github.client_id = '"github client id"'
-github.client_secret = '"github client secret"'
-github.redirect_uri = '"github redirect uri"'
+github.client_id = '"6cddf349e38cc8dd73f8"'
+github.client_secret = '"111d51300607e5d8eb256054eaaac6966716da96"'
+github.redirect_uri = '"recurve://oauth"'
 github.base_url = '"https://api.github.com/graphql"'
 def scopes =["user", "repo", "gist", "notifications",
              "delete_repo", "write:discussion", "admin:gpg_key", "admin:repo_hook",
