--- a/gittestsuper/src/main/AndroidManifest.xml
+++ b/gittestsuper/src/main/AndroidManifest.xml
@@ -1,2 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.gittestsuper" />
+    package="com.tangpj.gittestsuper" >
+
+    <permission android:name="com.tangpj.github.login_transfer"/>
+    <uses-permission android:name="com.tangpj.github.login_transfer"/>
+
+    <application>
+
+        <receiver android:name="com.tangpj.github.receiver.LoginTransferReceiver"
+            android:permission="com.tangpj.github.login_transfer">
+            <intent-filter>
+                <action android:name="com.tangpj.github.loginTransfer"/>
+            </intent-filter>
+        </receiver>
+    </application>
+
+</manifest>
