--- a/versions.gradle
+++ b/versions.gradle
@@ -34,6 +34,7 @@ versions.atsl_runner = "1.1.0-alpha1"
 versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
 versions.kotlin = "1.3.11"
+versions.kotlinx = "0.10.0"
 versions.ktx = "1.0.0-rc02"
 versions.navigation = "1.0.0-alpha06"
 versions.app_code = 1
@@ -43,7 +44,7 @@ versions.apollo = "1.0.0-alpha5"
 versions.apollo_converter = "0.1.0"
 versions.arouter_api = "1.4.1"
 versions.arouter_compiler = "1.2.2"
-deps.version = versions
+deps.versions = versions
 
 def androidx = [:]
 androidx.appcompat = "androidx.appcompat:appcompat:$versions.androidx"
@@ -118,7 +119,12 @@ kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 kotlin.ktx = "androidx.core:core-ktx:$versions.ktx"
 kotlin.allopen = "org.jetbrains.kotlin:kotlin-allopen:$versions.kotlin"
+kotlin.plugin_serialization = "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin"
 deps.kotlin = kotlin
+
+def kotlinx = [:]
+kotlinx.serialization = "org.jetbrains.kotlinx:kotlinx-serialization-runtime:$versions.kotlinx"
+deps.kotlinx = kotlinx
 
 def navigation = [:]
 navigation.runtime = "android.arch.navigation:navigation-runtime:$versions.navigation"
@@ -182,5 +188,6 @@ static def addRepos(RepositoryHandler handler) {
     handler.mavenLocal()
     handler.maven { url 'https://jitpack.io' }
     handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    handler.maven { url "https://kotlin.bintray.com/kotlinx" }
 }
 ext.addRepos = this.&addRepos
