--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ android.enableJetifier=true
 android.jetifier.blacklist=byte-buddy,guava
 -Pandroid.databinding.enableV2=true
 -Pandroid.debug.obsoleteApi=true
+systemProp.apollographql.useGlobalApolloCodegen=true
