update modules.gradle apollo outputPackageName

--- a/modules/module.gradle
+++ b/modules/module.gradle
@@ -56,7 +56,7 @@ kapt{
 
 apollo{
     schemaFilePath= "${getRootDir()}/baselib/github_base/src/main/graphql/com/tangpj/github/schema.json"
-    outputPackageName = "com.tangpj.github"
+    outputPackageName = "com.tangpj.${project.getName()}"
 }
 
 dependencies {
