fix apollo CustomType.URI type bug

--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -52,6 +52,12 @@ android {
 
 }
 
+apollo{
+    customTypeMapping = [
+            "URI" : "java.lang.String"
+    ]
+}
+
 
 dependencies {
     api project(':recurve')
