--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -23,6 +23,12 @@ android {
         buildConfigField 'String', 'SCOPES', github.scopes
 
         buildConfigField 'String', 'BASE_URL', github.base_url
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
 
     dataBinding{
@@ -92,6 +98,8 @@ dependencies {
     api deps.apollo.converter
     api deps.apollo.runtime
     api deps.apollo.android_support
+
+    api deps.cglib
 
     kapt deps.dagger.compiler
     kapt deps.dagger.android_support_compiler
