--- a/modules/module.gradle
+++ b/modules/module.gradle
@@ -62,6 +62,7 @@ kapt{
 apollo {
     schemaFilePath = "${getRootDir()}/baselib/github_base/src/main/graphql/com/tangpj/github/schema.json"
     outputPackageName = "com.tangpj.${project.getName()}"
+    useJavaBeansSemanticNaming = true
     customTypeMapping = [
             "URI": "java.lang.String"
     ]
