--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.jetifier.blacklist=byte-buddy,guava
 -Pandroid.databinding.enableV2=true
+android.databinding.enableV2=true
 -Pandroid.debug.obsoleteApi=true
 systemProp.apollographql.useGlobalApolloCodegen=true
