--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -60,7 +60,8 @@ android {
 
 apollo{
     customTypeMapping = [
-            "URI" : "java.lang.String"
+            "URI" : "java.lang.String",
+            "DtaeTime" : "java.util.Date"
     ]
 }
 
