--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     apply from: './github.gradle'
     apply from: './versions.gradle'
+    addRepos(repositories)
     dependencies {
         classpath deps.kotlin.plugin
         classpath deps.kotlin.plugin_serialization
@@ -12,10 +13,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-    repositories {
-        google()
-        jcenter()
-    }
+
 }
 
 
