--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -61,7 +61,7 @@ android {
 apollo{
     customTypeMapping = [
             "URI" : "java.lang.String",
-            "DATETIME" : "java.util.Date"
+            "DateTime" : "java.util.Date"
     ]
 }
 
