--- a/modules/module.gradle
+++ b/modules/module.gradle
@@ -60,6 +60,10 @@ kapt{
 }
 
 apollo {
+    customTypeMapping = [
+            "URI" : "java.lang.String",
+            "DATATIME" : "java.util.Date"
+    ]
     schemaFilePath = "${getRootDir()}/baselib/github_base/src/main/graphql/com/tangpj/github/schema.json"
     outputPackageName = "com.tangpj.${project.getName()}"
     useJavaBeansSemanticNaming = true
