--- a/versions.gradle
+++ b/versions.gradle
@@ -45,6 +45,7 @@ versions.apollo_converter = "0.1.0"
 versions.arouter_api = "1.4.1"
 versions.arouter_compiler = "1.2.2"
 versions.mapstruct = "1.3.0.Final"
+versions.mapstruct = "1.2.0"
 deps.versions = versions
 
 def androidx = [:]
@@ -167,6 +168,7 @@ deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.databinding_compiler = "androidx.databinding:databinding-compiler:$versions.databinding_compiler"
+deps.threetenabp = "com.jakewharton.threetenabp:threetenabp:1.2.0:$versions.threetenabp"
 ext.deps = deps
 
 def build_versions = [:]
