fix http pars bug

--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     api deps.apollo.android_support
 
     api deps.arouter.api
+    api deps.threetenabp
 
     kapt deps.dagger.compiler
     kapt deps.dagger.android_support_compiler
