--- a/gittestsuper/src/main/AndroidManifest.xml
+++ b/gittestsuper/src/main/AndroidManifest.xml
@@ -1,16 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tangpj.gittestsuper" >
 
-    <permission android:name="com.tangpj.github.login_transfer"/>
-
-    <application>
-
-        <receiver android:name="com.tangpj.github.receiver.LoginTransferReceiver"
-            android:permission="com.tangpj.github.login_transfer">
-            <intent-filter>
-                <action android:name="com.tangpj.github.loginTransfer"/>
-            </intent-filter>
-        </receiver>
-    </application>
+    <uses-permission android:name="com.tangpj.oauth2.provider.tokenProvider.READ"/>
 
 </manifest>
