--- a/modules/oauth2/src/main/AndroidManifest.xml
+++ b/modules/oauth2/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="com.tangpj.github.login_transfer"/>
 
+    <permission android:name="com.tangpj.oauth2.provider.tokenProvider.READ"/>
+
 
     <application
         android:label="@string/app_name">
@@ -25,6 +27,7 @@
         <provider
             android:authorities="com.tangpj.oauth2.provider.tokenProvider"
             android:name=".provider.TokenProvider"
+            android:grantUriPermissions="true"
             android:readPermission="com.tangpj.oauth2.provider.tokenProvider.READ"
             android:exported="true"/>
 
