--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,8 @@ include ':modules:oauth2',
 include 'recurve-retrofit2-support',
         'recurve-apollo-support',
         'recurve-dagger2-support',
-        'recurve-module-adapter'
+        'recurve-module-adapter',
+        'recurve-module-paging-support'
 
 
 project(":recurve").projectDir = file("../MvvmRecurve/recurve")
@@ -25,3 +26,4 @@ project(":recurve-retrofit2-support").projectDir = file("../MvvmRecurve/recurve-
 project(":recurve-apollo-support").projectDir = file("../MvvmRecurve/recurve-apollo-support")
 project(":recurve-dagger2-support").projectDir = file("../MvvmRecurve/recurve-dagger2-support")
 project(":recurve-module-adapter").projectDir = file("../MvvmRecurve/recurve-module-adapter")
+project(":recurve-module-paging-support").projectDir = file("../MvvmRecurve/recurve-module-paging-support")
