--- a/versions.gradle
+++ b/versions.gradle
@@ -8,10 +8,10 @@ def deps = [:]
 
 def versions = [:]
 versions.arch_core = "2.0.0-alpha1"
-versions.room = "2.0.0-rc01"
-versions.paging = "2.0.0-rc01"
 versions.lifecycle = "2.0.0-rc01"
+versions.paging = "2.1.0-rc01"
 versions.androidx = "1.0.0-alpha1"
+
 versions.dagger = "2.16"
 versions.junit = "4.12"
 versions.ext_junit = "1.1.0"
@@ -59,10 +59,10 @@ androidx.core_utils = "androidx.legacy:legacy-support-core-utils:$versions.andro
 deps.androidx = androidx
 
 def room = [:]
-room.runtime = "androidx.room:room-runtime:$versions.room"
-room.compiler = "androidx.room:room-compiler:$versions.room"
-room.rxjava2 = "androidx.room:room-rxjava2:$versions.room"
-room.testing = "androidx.room:room-testing:$versions.room"
+room.runtime = "androidx.room:room-runtime:$versions.lifecycle"
+room.compiler = "androidx.room:room-compiler:$versions.lifecycle"
+room.rxjava2 = "androidx.room:room-rxjava2:$versions.lifecycle"
+room.testing = "androidx.room:room-testing:$versions.lifecycle"
 deps.room = room
 
 def lifecycle = [:]
@@ -156,7 +156,7 @@ arouter.compiler = "com.alibaba:arouter-compiler:$versions.arouter_compiler"
 
 deps.arouter = arouter
 
-deps.paging = "androidx.paging:paging-runtime:$versions.paging"
+deps.paging = "androidx.paging:paging-runtime-ktx:$versions.paging"
 deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
 deps.glide_transformations = "jp.wasabeef:glide-transformations:$versions.glide_transformations"
 deps.dexmaker = "com.linkedin.dexmaker:dexmaker-mockito:$versions.dexmaker"
@@ -169,12 +169,13 @@ deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.databinding_compiler = "androidx.databinding:databinding-compiler:$versions.databinding_compiler"
-deps.threetenabp = "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
 deps.ext_junit = "androidx.test.ext:junit:$versions.ext_junit"
+deps.threetenabp = "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
+
 ext.deps = deps
 
 def build_versions = [:]
-build_versions.min_sdk = 21
+build_versions.min_sdk = 15
 build_versions.compile_sdk = 28
 build_versions.build_tools = "28.0.7"
 ext.build_versions = build_versions
@@ -195,7 +196,7 @@ static def addRepos(RepositoryHandler handler) {
     handler.mavenCentral()
     handler.mavenLocal()
     handler.maven { url 'https://jitpack.io' }
-    handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     handler.maven { url "https://kotlin.bintray.com/kotlinx" }
 }
 ext.addRepos = this.&addRepos
