--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     api deps.navigation.fragment_ktx
     api deps.navigation.fragment
     api deps.navigation.runtime
+    api deps.paging.common
 
     api deps.dagger.runtime
     api deps.dagger.android
