add pageing ktx && update repofragment

--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     api deps.navigation.fragment
     api deps.navigation.runtime
     api deps.paging.common
+    api deps.paging_ktx
 
     api deps.dagger.runtime
     api deps.dagger.android
