--- a/versions.gradle
+++ b/versions.gradle
@@ -49,6 +49,7 @@ versions.arouter_api = "1.4.1"
 versions.arouter_compiler = "1.2.2"
 versions.mapstruct = "1.3.0.Final"
 versions.threetenabp = "1.2.0"
+versions.markdown4j = "2.2-cj-1.1"
 deps.versions = versions
 
 def androidx = [:]
@@ -181,6 +182,7 @@ deps.hamcrest = "org.hamcrest:hamcrest-all:$versions.hamcrest"
 deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.ext_junit = "androidx.test.ext:junit:$versions.ext_junit"
 deps.threetenabp = "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
+deps.markdown4j = "org.commonjava.googlecode.markdown4j:markdown4j:$versions.markdown4j"
 
 ext.deps = deps
 
