--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 android.databinding.enableV2=true
 -Pandroid.debug.obsoleteApi=true
 systemProp.apollographql.useGlobalApolloCodegen=true
+kapt.incremental.apt=true
