--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,8 @@ include 'recurve-retrofit2-support',
         'recurve-apollo-support',
         'recurve-dagger2-support',
         'recurve-module-adapter',
-        'recurve-module-paging-support'
+        'recurve-module-paging-support',
+        'recurve-glide-support'
 
 
 project(":recurve").projectDir = file("../MvvmRecurve/recurve")
@@ -27,3 +28,4 @@ project(":recurve-apollo-support").projectDir = file("../MvvmRecurve/recurve-apo
 project(":recurve-dagger2-support").projectDir = file("../MvvmRecurve/recurve-dagger2-support")
 project(":recurve-module-adapter").projectDir = file("../MvvmRecurve/recurve-module-adapter")
 project(":recurve-module-paging-support").projectDir = file("../MvvmRecurve/recurve-module-paging-support")
+project(":recurve-glide-support").projectDir = file("../MvvmRecurve/recurve-glide-support")
