--- a/versions.gradle
+++ b/versions.gradle
@@ -29,7 +29,7 @@ versions.constraint_layout = "1.1.0"
 versions.glide = "4.8.0"
 versions.glide_transformations = "3.3.0"
 versions.timber = "4.7.1"
-versions.android_gradle_plugin = '3.5.0-beta02'
+versions.android_gradle_plugin = '3.6.0-alpha03'
 versions.rxjava2 = "2.2.1"
 versions.rx_android = "2.1.0"
 versions.atsl_runner = "1.1.0-alpha1"
@@ -43,7 +43,7 @@ versions.navigation = "1.0.0-alpha06"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.3.2"
-versions.apollo = "1.0.1-SNAPSHOT"
+versions.apollo = "1.0.0"
 versions.apollo_converter = "0.1.0"
 versions.arouter_api = "1.4.1"
 versions.arouter_compiler = "1.2.2"
@@ -125,7 +125,7 @@ mockito.all = "org.mockito:mockito-all:$versions.mockito_all"
 deps.mockito = mockito
 
 def kotlin = [:]
-kotlin.stdlib_jdk8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+kotlin.stdlib_jdk8 = "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
 kotlin.ktx = "androidx.core:core-ktx:$versions.ktx"
