--- a/versions.gradle
+++ b/versions.gradle
@@ -12,6 +12,7 @@ versions.lifecycle = "2.0.0"
 versions.paging = "2.1.0"
 versions.androidx = "1.0.0"
 versions.room = "2.1.0-alpha06"
+versions.viewpager2 = "1.0.0-alpha05"
 
 versions.dagger = "2.16"
 versions.junit = "4.12"
@@ -59,6 +60,7 @@ androidx.annotations = "androidx.annotation:annotation:$versions.androidx"
 androidx.customtabs = "androidx.browser:browser:$versions.androidx"
 androidx.material = "com.google.android.material:material:$versions.androidx"
 androidx.core_utils = "androidx.legacy:legacy-support-core-utils:$versions.androidx"
+androidx.viewpager2 = "androidx.viewpager2:viewpager2:$versions.viewpager2"
 deps.androidx = androidx
 
 def room = [:]
