--- a/baselib/github_base/src/main/AndroidManifest.xml
+++ b/baselib/github_base/src/main/AndroidManifest.xml
@@ -1,2 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tangpj.github" />
+    package="com.tangpj.github" >
+
+    <application>
+        <activity android:name=".SchameFilterActivity">
+            <!-- Schame -->
+            <intent-filter>
+                <data
+                    android:host="tangpj.com"
+                    android:scheme="recurve"/>
+
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
