--- a/versions.gradle
+++ b/versions.gradle
@@ -51,6 +51,7 @@ versions.arouter_compiler = "1.2.2"
 versions.mapstruct = "1.3.0.Final"
 versions.threetenabp = "1.2.0"
 versions.markdown4j = "2.2-cj-1.1"
+versions.markwon= "4.0.1"
 deps.versions = versions
 
 def androidx = [:]
@@ -185,6 +186,8 @@ deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_g
 deps.ext_junit = "androidx.test.ext:junit:$versions.ext_junit"
 deps.threetenabp = "com.jakewharton.threetenabp:threetenabp:$versions.threetenabp"
 deps.markdown4j = "org.commonjava.googlecode.markdown4j:markdown4j:$versions.markdown4j"
+deps.markwon_core = "io.noties.markwon:core:$versions.markwon"
+deps.markwon_html = "io.noties.markwon:html:$versions.markwon"
 
 ext.deps = deps
 
