--- a/versions.gradle
+++ b/versions.gradle
@@ -19,7 +19,7 @@ versions.junit = "4.12"
 versions.ext_junit = "1.1.0"
 versions.espresso = "3.1.0-alpha1"
 versions.retrofit = "2.4.0"
-versions.okhttp = "3.11.0"
+versions.okhttp = "4.0.1"
 versions.okhttp_logging_interceptor = "3.9.0"
 versions.mockwebserver = "3.8.1"
 versions.apache_commons = "2.5"
@@ -175,6 +175,7 @@ markwon.core = "io.noties.markwon:core:$versions.markwon"
 markwon.html = "io.noties.markwon:html:$versions.markwon"
 markwon.recycler = "io.noties.markwon:recycler:$versions.markwon"
 markwon.glide = "io.noties.markwon:image-glide:$versions.markwon"
+markwon.table = "io.noties.markwon:recycler-table:$versions.markwon"
 deps.markwon = markwon
 
 deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
