add flexbox layout

--- a/modules/repository/build.gradle
+++ b/modules/repository/build.gradle
@@ -1,4 +1,5 @@
 apply from: '../module.gradle'
 dependencies {
     implementation deps.androidx.viewpager2
+    implementation deps.androidx.flexbox_layout
 }
