--- a/modules/module.gradle
+++ b/modules/module.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'calces.screen'
 
 
 
@@ -119,3 +120,4 @@ dependencies {
     })
 
 }
+
