--- a/versions.gradle
+++ b/versions.gradle
@@ -41,7 +41,7 @@ versions.kotlin = "1.3.21"
 versions.kotlinx = "0.10.0"
 versions.kotlinx_coroutines = "1.0.1"
 versions.ktx = "1.0.0-rc02"
-versions.navigation = "1.0.0-alpha06"
+versions.navigation = "2.1.0-beta02"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.3.2"
@@ -149,12 +149,12 @@ deps.kotlinx = kotlinx
 deps.paging_ktx = "androidx.paging:paging-runtime-ktx:$versions.paging"
 
 def navigation = [:]
-navigation.runtime = "android.arch.navigation:navigation-runtime:$versions.navigation"
-navigation.runtime_ktx = "android.arch.navigation:navigation-runtime-ktx:$versions.navigation"
-navigation.fragment = "android.arch.navigation:navigation-fragment:$versions.navigation"
-navigation.fragment_ktx = "android.arch.navigation:navigation-fragment-ktx:$versions.navigation"
-navigation.safe_args_plugin = "android.arch.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
-navigation.testing_ktx = "android.arch.navigation:navigation-testing-ktx:$versions.navigation"
+navigation.runtime = "androidx.navigation:navigation-runtime:$versions.navigation"
+navigation.runtime_ktx = "androidx.navigation:navigation-runtime-ktx:$versions.navigation"
+navigation.fragment = "androidx.navigation:navigation-fragment:$versions.navigation"
+navigation.fragment_ktx = "androidx.navigation:navigation-fragment-ktx:$versions.navigation"
+navigation.safe_args_plugin = "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
+navigation.testing_ktx = "androidx.navigation:navigation-testing-ktx:$versions.navigation"
 deps.navigation = navigation
 
 def apollo = [:]
