--- a/settings.gradle
+++ b/settings.gradle
@@ -19,7 +19,8 @@ include 'recurve-retrofit2-support',
         'recurve-dagger2-support',
         'recurve-module-adapter',
         'recurve-module-paging-support',
-        'recurve-glide-support'
+        'recurve-glide-support',
+        'viewpager2-navigation-ktx'
 
 
 project(":recurve").projectDir = file("../MvvmRecurve/recurve")
@@ -29,3 +30,4 @@ project(":recurve-dagger2-support").projectDir = file("../MvvmRecurve/recurve-da
 project(":recurve-module-adapter").projectDir = file("../MvvmRecurve/recurve-module-adapter")
 project(":recurve-module-paging-support").projectDir = file("../MvvmRecurve/recurve-module-paging-support")
 project(":recurve-glide-support").projectDir = file("../MvvmRecurve/recurve-glide-support")
+project(":viewpager2-navigation-ktx").projectDir = file("../MvvmRecurve/viewpager2-navigation-ktx")
