--- a/versions.gradle
+++ b/versions.gradle
@@ -12,7 +12,7 @@ versions.lifecycle = "2.0.0"
 versions.paging = "2.1.0"
 versions.androidx = "1.0.0"
 versions.room = "2.1.0-alpha06"
-versions.viewpager2 = "1.0.0-alpha05"
+versions.viewpager2 = "1.0.0-beta02"
 versions.flexbox_layout = "1.1.0"
 
 versions.dagger = "2.16"
@@ -39,7 +39,7 @@ versions.atsl_rules = "1.0.1"
 versions.hamcrest = "1.3"
 versions.kotlin = "1.3.21"
 versions.kotlinx = "0.10.0"
-versions.kotlinx_coroutines = "1.0.1"
+versions.kotlinx_coroutines = "1.3.0-RC"
 versions.ktx = "1.0.0-rc02"
 versions.navigation = "2.1.0-beta02"
 versions.app_code = 1
