fix navigation support bug

--- a/modules/repository/build.gradle
+++ b/modules/repository/build.gradle
@@ -2,6 +2,7 @@ apply from: '../module.gradle'
 dependencies {
     implementation deps.androidx.viewpager2
     implementation deps.androidx.flexbox_layout
+    implementation deps.navigation.ui_ktx
 }
 
 
