--- a/versions.gradle
+++ b/versions.gradle
@@ -28,7 +28,7 @@ versions.mockito = "2.8.47"
 versions.mockito_all = "1.10.19"
 versions.dexmaker = "2.2.0"
 versions.constraint_layout = "1.1.0"
-versions.glide = "4.8.0"
+versions.glide = "4.9.0"
 versions.glide_transformations = "3.3.0"
 versions.timber = "4.7.1"
 versions.android_gradle_plugin = '3.6.0-alpha04'
@@ -51,8 +51,8 @@ versions.arouter_api = "1.5.0"
 versions.arouter_compiler = "1.2.2"
 versions.mapstruct = "1.3.0.Final"
 versions.threetenabp = "1.2.0"
-versions.markdown4j = "2.2-cj-1.1"
-versions.markwon= "4.0.1"
+versions.markwon= "4.1.0"
+versions.svg = "1.4"
 deps.versions = versions
 
 def androidx = [:]
@@ -180,11 +180,17 @@ markwon.core = "io.noties.markwon:core:$versions.markwon"
 markwon.html = "io.noties.markwon:html:$versions.markwon"
 markwon.recycler = "io.noties.markwon:recycler:$versions.markwon"
 markwon.glide = "io.noties.markwon:image-glide:$versions.markwon"
+markwon.image= "io.noties.markwon:image:$versions.markwon"
 markwon.table = "io.noties.markwon:recycler-table:$versions.markwon"
 deps.markwon = markwon
 
-deps.glide = "com.github.bumptech.glide:glide:$versions.glide"
-deps.glide_transformations = "jp.wasabeef:glide-transformations:$versions.glide_transformations"
+def glide = [:]
+glide.core = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+glide.transformations = "jp.wasabeef:glide-transformations:$versions.glide_transformations"
+deps.glide = glide
+
+deps.svg = "com.caverock:androidsvg-aar:$versions.svg"
 deps.dexmaker = "com.linkedin.dexmaker:dexmaker-mockito:$versions.dexmaker"
 deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
