--- a/versions.gradle
+++ b/versions.gradle
@@ -41,7 +41,7 @@ versions.kotlin = "1.3.21"
 versions.kotlinx = "0.10.0"
 versions.kotlinx_coroutines = "1.3.0-RC"
 versions.ktx = "1.0.0-rc02"
-versions.navigation = "2.1.0-beta02"
+versions.navigation = "2.2.0-alpha01"
 versions.app_code = 1
 versions.app_name = "1.0"
 versions.databinding_compiler = "3.3.2"
