--- a/modules/repository/build.gradle
+++ b/modules/repository/build.gradle
@@ -3,7 +3,9 @@ dependencies {
     implementation deps.androidx.viewpager2
     implementation deps.androidx.flexbox_layout
     implementation deps.navigation.ui_ktx
+    implementation deps.markdown4j
     implementation project(':baselib:prettifier')
+
 }
 
 
