feat# refactoring RepoDetailActivity

--- a/modules/repository/build.gradle
+++ b/modules/repository/build.gradle
@@ -4,6 +4,9 @@ dependencies {
     implementation deps.androidx.flexbox_layout
     implementation deps.navigation.ui_ktx
     implementation deps.markdown4j
+    implementation project(':viewpager2-navigation-ktx')
+    implementation project(':viewpager2-tablayout-ktx')
+    implementation project(':bottom-navigation-ktx')
     implementation project(':baselib:prettifier')
 
 }
