--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,10 @@ buildscript {
 
 }
 
-
-
 plugins {
-    id "calces.appconfig" version "1.2.42"
+    id "calces.appconfig" version "3.3.0-alpha01"
+    id "calces.screen" version "1.3.4-alpha02"
 }
- 
 appConfig{
     debugEnable true
     apps{
