--- a/versions.gradle
+++ b/versions.gradle
@@ -54,7 +54,8 @@ versions.threetenabp = "1.2.0"
 versions.markdown4j = "2.2-cj-1.1"
 versions.svg = "1.4"
 versions.arrow = "0.10.0-SNAPSHOT"
-versions.calces = "3.3.0-alpha01"
+versions.calces_screen = "1.3.4-alpha01"
+versions.calces_component = "3.3.0-alpha01"
 deps.versions = versions
 
 def androidx = [:]
