--- a/baselib/github_base/build.gradle
+++ b/baselib/github_base/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     api project(':recurve-apollo-support')
     api project(':recurve-module-adapter')
     api project(':recurve-module-paging-support')
+    api project(':recurve-glide-support')
 
     api deps.androidx.material
     implementation deps.androidx.viewpager2
