--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,4 @@ project(":viewpager2-navigation-ktx").projectDir = file("../MvvmRecurve/viewpage
 project(":viewpager2-tablayout-ktx").projectDir = file("../MvvmRecurve/viewpager2-tablayout-ktx")
 project(":bottom-navigation-ktx").projectDir = file("../MvvmRecurve/bottom-navigation-ktx")
 include ':baselib:prettifier'
+include ':baselib:pager'
